[project]
name = "andrea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "langgraph>=0.5.1",
    "langgraph-checkpoint-redis>=0.0.8",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-magic>=0.4.27",
    "pillow>=10.0.0",
    "pypdf>=3.0.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.0.0",
    "langchain>=0.3.26",
    "python-dotenv>=1.1.1",
    "pymupdf>=1.26.3",
    "langchain-openai>=0.3.27",
    "streamlit>=1.32.0",
    "streamlit-extras>=0.4.0",
]
